# neardesk

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  check.ps1  run.ps1
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/src/: about.rs  connect.rs  logo.rs  main.rs  this_pc.rs  widgets.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
packaging/macos/: Info.plist
